--- a/Biz/Biz.csproj
+++ b/Biz/Biz.csproj
@@ -45,10 +45,12 @@
   <ItemGroup>
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Interfaces\IAccountService.cs" />
+    <Compile Include="Interfaces\IAssetService.cs" />
     <Compile Include="Interfaces\IFacilityService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AccountService.cs" />
+    <Compile Include="Services\AssetService.cs" />
     <Compile Include="Services\FacilityService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
