--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -266,6 +266,7 @@
     <Content Include="Views\Standard\UserHome.cshtml" />
     <Content Include="Views\Standard\UserLogin.cshtml" />
     <Content Include="Views\Facility\ViewReport.cshtml" />
+    <Content Include="Views\Resource\ResourceListCount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
